--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,9 +12,14 @@ on:
 jobs:
   build:
 
-    runs-on: mcr.microsoft.com/dotnet/aspnet:6.0
+    runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
