--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,13 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    container: mcr.microsoft.com/dotnet/aspnet
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
