--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Build
       run: dotnet build  --no-restore
     - name: Test
-      run: dotnet test  --no-build --verbosity normal  
+      run: dotnet test
 
