--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    container: mcr.microsoft.com/dotnet/sdk
+    container: mcr.microsoft.com/dotnet/aspnet:6.0
     steps:
     - uses: actions/checkout@v3
     - name: Restore dependencies
